fix(runtime): harden fixture and SQL script parsing
Share the YAML parser used by configuration with runtime fixture loading so !!omap fixture documents preserve entry order and empty ordered maps parse cleanly. Keep fixture records in insertion order, carry source names into fixture parsing errors, and split SQL batches only on standalone GO lines so literals such as 'go up' are not treated as separators. Wrap batch execution failures with the source file for easier diagnosis.